// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown toggle 1`] = `
.pf-c-dropdown__toggle-icon {
  display: block;
}
.pf-c-dropdown__toggle-icon {
  display: block;
}
.pf-c-dropdown__toggle {
  display: block;
  position: relative;
  min-width: 44px;
  min-height: 44px;
  padding: 0.375rem 0.5rem 0.375rem 0.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: #282d33;
  background-color: transparent;
}

<DropdownToggle
  className=""
  iconComponent={[Function]}
  id="Dropdown Toggle"
  isActive={false}
  isFocused={false}
  isHovered={false}
  isOpen={false}
  onToggle={[Function]}
  parentRef={null}
>
  <DropdownToggle
    className=""
    id="Dropdown Toggle"
    isActive={false}
    isFocused={false}
    isHovered={false}
    isOpen={false}
    onToggle={[Function]}
    parentRef={null}
  >
    <button
      aria-expanded={false}
      className="pf-c-dropdown__toggle"
      id="Dropdown Toggle"
      onClick={[Function]}
    >
      Dropdown
      <CaretDownIcon
        className="pf-c-dropdown__toggle-icon"
        color="currentColor"
        size="sm"
        title={null}
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          className="pf-c-dropdown__toggle-icon"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            transform=""
          />
        </svg>
      </CaretDownIcon>
    </button>
  </DropdownToggle>
</DropdownToggle>
`;

exports[`Kebab toggle 1`] = `
.pf-c-dropdown__toggle {
  display: block;
  position: relative;
  min-width: 44px;
  min-height: 44px;
  padding: 0.375rem 0.5rem 0.375rem 0.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: #282d33;
  background-color: transparent;
}

<Kebab
  aria-label="Actions"
  className=""
  id="Dropdown Toggle"
  isActive={false}
  isFocused={false}
  isHovered={false}
  isOpen={false}
  onToggle={[Function]}
  parentRef={null}
>
  <DropdownToggle
    aria-label="Actions"
    className=""
    id="Dropdown Toggle"
    isActive={false}
    isFocused={false}
    isHovered={false}
    isOpen={false}
    onToggle={[Function]}
    parentRef={null}
  >
    <button
      aria-expanded={false}
      aria-label="Actions"
      className="pf-c-dropdown__toggle"
      id="Dropdown Toggle"
      onClick={[Function]}
    >
      <EllipsisVIcon
        color="currentColor"
        size="sm"
        title={null}
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 192 512"
          width="1em"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
            transform=""
          />
        </svg>
      </EllipsisVIcon>
    </button>
  </DropdownToggle>
</Kebab>
`;
